[FIX] layouts of About section, fix gaps and weird alignments or overly generous margins or paddings

--- a/javascript/css/style-1000px.css
+++ b/javascript/css/style-1000px.css
@@ -156,3 +156,9 @@
 		{
 			display: none;
 		}
+		
+		
+		#footer p
+		{
+			margin: 0 0 0 0;
+		}
